--- a/package.json
+++ b/package.json
@@ -47,5 +47,8 @@
     "vscode-test": "^1.5.0",
     "webpack": "^5.19.0",
     "webpack-cli": "^4.4.0"
+  },
+  "dependencies": {
+    "copy-to-clipboard": "^3.3.1"
   }
 }
