--- a/package.json
+++ b/package.json
@@ -10,14 +10,50 @@
     "Other"
   ],
   "activationEvents": [
-    "onCommand:vscode-FSToolbox.helloWorld"
+    "*"
   ],
   "main": "./dist/extension.js",
   "contributes": {
     "commands": [
       {
+        "command": "vscode-FSToolbox.CopyFilePath",
+        "title": "FST: Copy active file path"
+      },
+      {
         "command": "vscode-FSToolbox.CopyFileName",
         "title": "FST: Copy active file name"
+      },
+      {
+        "command": "vscode-FSToolbox.CopyRelativeFilePath",
+        "title": "FST: Copy relative file path"
+      },
+      {
+        "command": "vscode-FSToolbox.CopyFileNameWithoutExtension",
+        "title": "FST: Copy active file name without extension"
+      },
+      {
+        "command": "vscode-FSToolbox.CopyFilePathWithLineNumber",
+        "title": "FST: Copy active file path name and line number"
+      },
+      {
+        "command": "vscode-FSToolbox.CopyFileNameWithLineNumber",
+        "title": "FST: Copy active file name and line number"
+      },
+      {
+        "command": "vscode-FSToolbox.CopyWorkspaceRootPath",
+        "title": "FST: Copy Workspace root path"
+      },
+      {
+        "command": "vscode-FSToolbox.CopyFolderPath",
+        "title": "FST: Copy folder path"
+      },
+      {
+        "command": "vscode-FSToolbox.CopyRelativeFilePath",
+        "title": "FST: Copy relative file path"
+      },
+      {
+        "command": "vscode-FSToolbox.CopyRelativeFilePathWithLineNumber",
+        "title": "FST: Copy relative file path with line number"
       }
     ]
   },
@@ -42,13 +78,11 @@
     "eslint": "^7.19.0",
     "glob": "^7.1.6",
     "mocha": "^8.2.1",
-    "ts-loader": "^8.0.14",
+    "ts-loader": "^8.0.18",
     "typescript": "^4.1.3",
     "vscode-test": "^1.5.0",
     "webpack": "^5.19.0",
-    "webpack-cli": "^4.4.0"
+    "webpack-cli": "^4.5.0"
   },
-  "dependencies": {
-    "copy-to-clipboard": "^3.3.1"
-  }
+  "dependencies": {}
 }
