--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,11 +1,12 @@
-.vscode/**
-.vscode-test/**
-out/**
-src/**
-.gitignore
-.yarnrc
-vsc-extension-quickstart.md
 **/tsconfig.json
-**/.eslintrc.json
+!file.ts
+todo
+out/
+src/
 **/*.map
-**/*.ts
+webpack.config.js
+node_modules/
+.vscode/
+.github/
+.gitignore
+package.json
