--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vscode-FileSystemToolbox",
+  "name": "vscode-filesystemtoolbox",
   "displayName": "FileSystemToolbox",
   "description": "",
   "version": "0.0.1",
@@ -9,10 +9,17 @@
   "categories": [
     "Other"
   ],
+  "keywords": [
+    "tools",
+    "utility",
+    "FileSystem",
+    "files",
+    "folders"
+  ],
   "activationEvents": [
     "*"
   ],
-  "main": "./dist/extension.js",
+  "main": "./dist/extension",
   "contributes": {
     "commands": [
       {
@@ -58,15 +65,11 @@
     ]
   },
   "scripts": {
-    "vscode:prepublish": "npm run package",
-    "compile": "webpack",
-    "watch": "webpack --watch",
-    "package": "webpack --mode production --devtool hidden-source-map",
+    "vscode:prepublish": "webpack --mode production",
+    "webpack": "webpack --mode development",
+    "webpack-dev": "webpack --mode development --watch",
     "test-compile": "tsc -p ./",
-    "test-watch": "tsc -watch -p ./",
-    "pretest": "npm run test-compile && npm run lint",
-    "lint": "eslint src --ext ts",
-    "test": "node ./out/test/runTest.js"
+    "unit-tests": "tsc -w -p ./"
   },
   "devDependencies": {
     "@types/glob": "^7.1.3",
@@ -78,11 +81,11 @@
     "eslint": "^7.19.0",
     "glob": "^7.1.6",
     "mocha": "^8.2.1",
-    "ts-loader": "^8.0.18",
+    "ts-loader": "^8.2.0",
     "typescript": "^4.1.3",
     "vscode-test": "^1.5.0",
-    "webpack": "^5.19.0",
-    "webpack-cli": "^4.5.0"
-  },
-  "dependencies": {}
+    "webpack": "^5.36.2",
+    "webpack-cli": "^4.7.0",
+    "webpack-dev": "^1.1.1"
+  }
 }
