--- a/package.json
+++ b/package.json
@@ -63,6 +63,14 @@
         "title": "FST: Copy relative file path"
       },
       {
+        "command": "vscode-FileSystemToolbox.DuplicateFile",
+        "title": "FST: Duplicate file"
+      },
+      {
+        "command": "vscode-FileSystemToolbox.RemoveFile",
+        "title": "FST: Remove file"
+      },
+      {
         "command": "vscode-FileSystemToolbox.CopyRelativeFilePathWithLineNumber",
         "title": "FST: Copy relative file path with line number"
       }
@@ -85,7 +93,11 @@
     "eslint": "^7.19.0",
     "glob": "^7.1.6",
     "mocha": "^8.2.1",
+    "mocha-explorer-launcher-scripts": "^0.3.0",
+    "nyc": "^15.1.0",
+    "source-map-support": "^0.5.19",
     "ts-loader": "^8.2.0",
+    "ts-node": "^9.1.1",
     "typescript": "^4.1.3",
     "vscode-test": "^1.5.0",
     "webpack": "^5.36.2",
