update package manifest to work with untrusted workspaces

--- a/package.json
+++ b/package.json
@@ -19,6 +19,11 @@
   "activationEvents": [
     "*"
   ],
+  "capabilities": {
+    "untrustedWorkspaces": {
+      "supported": true
+    }
+  },
   "main": "./dist/extension",
   "contributes": {
     "commands": [
