--- a/package.json
+++ b/package.json
@@ -1,112 +1,119 @@
 {
-  "name": "vscode-filesystemtoolbox",
-  "displayName": "FileSystemToolbox",
-  "description": "",
-  "version": "0.0.1",
-  "engines": {
-    "vscode": "^1.45.0"
-  },
-  "categories": [
-    "Other"
-  ],
-  "keywords": [
-    "tools",
-    "utility",
-    "FileSystem",
-    "files",
-    "folders"
-  ],
-  "activationEvents": [
-    "*"
-  ],
-  "capabilities": {
-    "untrustedWorkspaces": {
-      "supported": true
+    "name": "vscode-filesystemtoolbox",
+    "displayName": "FileSystemToolbox",
+    "description": "",
+    "version": "0.0.1",
+    "engines": {
+        "vscode": "^1.45.0"
+    },
+    "categories": [
+        "Other"
+    ],
+    "icon": "tech-service.png",
+    "preview": true,
+    "publisher": "carlocardella",
+    "author": {
+        "name": "Carlo Cardella",
+        "url": "https://cloudnotes.io"
+    },
+    "keywords": [
+        "tools",
+        "utility",
+        "FileSystem",
+        "files",
+        "folders"
+    ],
+    "activationEvents": [
+        "*"
+    ],
+    "capabilities": {
+        "untrustedWorkspaces": {
+            "supported": true
+        }
+    },
+    "main": "./dist/extension",
+    "contributes": {
+        "commands": [
+            {
+                "command": "vscode-FileSystemToolbox.CopyFilePath",
+                "title": "FST: Copy active file path"
+            },
+            {
+                "command": "vscode-FileSystemToolbox.CopyFileName",
+                "title": "FST: Copy active file name"
+            },
+            {
+                "command": "vscode-FileSystemToolbox.CopyRelativeFilePath",
+                "title": "FST: Copy relative file path"
+            },
+            {
+                "command": "vscode-FileSystemToolbox.CopyFileNameWithoutExtension",
+                "title": "FST: Copy active file name without extension"
+            },
+            {
+                "command": "vscode-FileSystemToolbox.CopyFilePathWithLineNumber",
+                "title": "FST: Copy active file path with line number"
+            },
+            {
+                "command": "vscode-FileSystemToolbox.CopyFileNameWithLineNumber",
+                "title": "FST: Copy active file name with line number"
+            },
+            {
+                "command": "vscode-FileSystemToolbox.CopyWorkspaceRootPath",
+                "title": "FST: Copy Workspace root path"
+            },
+            {
+                "command": "vscode-FileSystemToolbox.CopyFolderPath",
+                "title": "FST: Copy folder path"
+            },
+            {
+                "command": "vscode-FileSystemToolbox.CopyRelativeFolderPath",
+                "title": "FST: Copy relative folder path"
+            },
+            {
+                "command": "vscode-FileSystemToolbox.CopyRelativeFilePath",
+                "title": "FST: Copy relative file path"
+            },
+            {
+                "command": "vscode-FileSystemToolbox.DuplicateFile",
+                "title": "FST: Duplicate file"
+            },
+            {
+                "command": "vscode-FileSystemToolbox.RemoveFile",
+                "title": "FST: Remove file"
+            },
+            {
+                "command": "vscode-FileSystemToolbox.CopyRelativeFilePathWithLineNumber",
+                "title": "FST: Copy relative file path with line number"
+            }
+        ]
+    },
+    "scripts": {
+        "vscode:prepublish": "webpack --mode production",
+        "webpack": "webpack --mode development",
+        "webpack-dev": "webpack --mode development --watch",
+        "test-compile": "tsc -p ./",
+        "unit-tests": "tsc -w -p ./"
+    },
+    "devDependencies": {
+        "@types/glob": "^7.1.3",
+        "@types/mocha": "^8.0.4",
+        "@types/node": "^12.11.7",
+        "@types/vscode": "^1.54.0",
+        "@typescript-eslint/eslint-plugin": "^4.14.1",
+        "@typescript-eslint/parser": "^4.14.1",
+        "eslint": "^7.19.0",
+        "glob": "^7.1.6",
+        "mocha": "^8.2.1",
+        "mocha-explorer-launcher-scripts": "^0.3.0",
+        "nyc": "^15.1.0",
+        "source-map-support": "^0.5.19",
+        "ts-loader": "^8.2.0",
+        "ts-node": "^9.1.1",
+        "typescript": "^4.1.3",
+        "vscode-test": "^1.5.0",
+        "webpack": "^5.36.2",
+        "webpack-cli": "^4.7.0",
+        "webpack-dev": "^1.1.1"
     }
-  },
-  "main": "./dist/extension",
-  "contributes": {
-    "commands": [
-      {
-        "command": "vscode-FileSystemToolbox.CopyFilePath",
-        "title": "FST: Copy active file path"
-      },
-      {
-        "command": "vscode-FileSystemToolbox.CopyFileName",
-        "title": "FST: Copy active file name"
-      },
-      {
-        "command": "vscode-FileSystemToolbox.CopyRelativeFilePath",
-        "title": "FST: Copy relative file path"
-      },
-      {
-        "command": "vscode-FileSystemToolbox.CopyFileNameWithoutExtension",
-        "title": "FST: Copy active file name without extension"
-      },
-      {
-        "command": "vscode-FileSystemToolbox.CopyFilePathWithLineNumber",
-        "title": "FST: Copy active file path with line number"
-      },
-      {
-        "command": "vscode-FileSystemToolbox.CopyFileNameWithLineNumber",
-        "title": "FST: Copy active file name with line number"
-      },
-      {
-        "command": "vscode-FileSystemToolbox.CopyWorkspaceRootPath",
-        "title": "FST: Copy Workspace root path"
-      },
-      {
-        "command": "vscode-FileSystemToolbox.CopyFolderPath",
-        "title": "FST: Copy folder path"
-      },
-      {
-        "command": "vscode-FileSystemToolbox.CopyRelativeFolderPath",
-        "title": "FST: Copy relative folder path"
-      },
-      {
-        "command": "vscode-FileSystemToolbox.CopyRelativeFilePath",
-        "title": "FST: Copy relative file path"
-      },
-      {
-        "command": "vscode-FileSystemToolbox.DuplicateFile",
-        "title": "FST: Duplicate file"
-      },
-      {
-        "command": "vscode-FileSystemToolbox.RemoveFile",
-        "title": "FST: Remove file"
-      },
-      {
-        "command": "vscode-FileSystemToolbox.CopyRelativeFilePathWithLineNumber",
-        "title": "FST: Copy relative file path with line number"
-      }
-    ]
-  },
-  "scripts": {
-    "vscode:prepublish": "webpack --mode production",
-    "webpack": "webpack --mode development",
-    "webpack-dev": "webpack --mode development --watch",
-    "test-compile": "tsc -p ./",
-    "unit-tests": "tsc -w -p ./"
-  },
-  "devDependencies": {
-    "@types/glob": "^7.1.3",
-    "@types/mocha": "^8.0.4",
-    "@types/node": "^12.11.7",
-    "@types/vscode": "^1.54.0",
-    "@typescript-eslint/eslint-plugin": "^4.14.1",
-    "@typescript-eslint/parser": "^4.14.1",
-    "eslint": "^7.19.0",
-    "glob": "^7.1.6",
-    "mocha": "^8.2.1",
-    "mocha-explorer-launcher-scripts": "^0.3.0",
-    "nyc": "^15.1.0",
-    "source-map-support": "^0.5.19",
-    "ts-loader": "^8.2.0",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.1.3",
-    "vscode-test": "^1.5.0",
-    "webpack": "^5.36.2",
-    "webpack-cli": "^4.7.0",
-    "webpack-dev": "^1.1.1"
-  }
 }
