--- a/.gitignore
+++ b/.gitignore
@@ -131,3 +131,4 @@ out
 # Custom rules (everything added below won't be overriden by 'Generate .gitignore File' if you use 'Update' option)
 
 vsc-extension-quickstart.md
+*.vsix
