--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "vscode-filesystemtoolbox",
     "displayName": "File System Toolbox",
-    "description": "",
+    "description": "Collection of tools to work with the File System",
     "version": "0.0.1",
     "engines": {
         "vscode": "^1.45.0"
