--- a/package.json
+++ b/package.json
@@ -99,6 +99,10 @@
                 "title": "FST: Transform path to Posix"
             },
             {
+                "command": "vscode-FileSystemToolbox.CopySelectionWithMetadata",
+                "title": "FST: Copy Selection With Metadata"
+            },
+            {
                 "command": "vscode-FileSystemToolbox.TransformPathToWin32",
                 "title": "FST: Transform path to Win32"
             }
@@ -111,11 +115,20 @@
                         "type": "string",
                         "description": "The type of path to use when copying a selection with metadata",
                         "enum": [
-                            "FullPath",
-                            "FileName",
-                            "RelativePath"
+                            "fullPath",
+                            "fileName",
+                            "relativePath"
                         ],
-                        "default": "FullPath"
+                        "default": "fullPath"
+                    },
+                    "fst.MetadataPathPosition": {
+                        "type": "string",
+                        "description": "The position where show the metadata info, relative to the selection content",
+                        "enum": [
+                            "above",
+                            "below"
+                        ],
+                        "default": "below"
                     },
                     "fst.CopyMetadataLineNumbers": {
                         "type": "boolean",
@@ -124,7 +137,12 @@
                     },
                     "fst.CopyMetadataSelectionRange": {
                         "type": "boolean",
-                        "description": "Copy the selection range along with the selection metatada",
+                        "description": "Copy the selection range along with the selection metadata",
+                        "default": true
+                    },
+                    "fst.MetadataCopyLineNumbers": {
+                        "type": "boolean",
+                        "description": "Copy the original line numbers along with the text selection",
                         "default": true
                     }
                 }
