--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,23 +10,23 @@
     "typescript.tsc.autoDetect": "off",
     "favorites.sortDirection": "ASC",
     "workbench.colorCustomizations": {
-        "activityBar.activeBackground": "#711231",
-        "activityBar.activeBorder": "#3c8916",
-        "activityBar.background": "#711231",
-        "activityBar.foreground": "#e7e7e7",
-        "activityBar.inactiveForeground": "#e7e7e799",
-        "activityBarBadge.background": "#3c8916",
+        "activityBar.activeBackground": "#739fc3",
+        "activityBar.activeBorder": "#9c4374",
+        "activityBar.background": "#739fc3",
+        "activityBar.foreground": "#15202b",
+        "activityBar.inactiveForeground": "#15202b99",
+        "activityBarBadge.background": "#9c4374",
         "activityBarBadge.foreground": "#e7e7e7",
-        "statusBar.background": "#450b1e",
+        "statusBar.background": "#4f87b4",
         "statusBar.foreground": "#e7e7e7",
-        "statusBarItem.hoverBackground": "#711231",
-        "titleBar.activeBackground": "#450b1e",
+        "statusBarItem.hoverBackground": "#739fc3",
+        "titleBar.activeBackground": "#4f87b4",
         "titleBar.activeForeground": "#e7e7e7",
-        "titleBar.inactiveBackground": "#450b1e99",
+        "titleBar.inactiveBackground": "#4f87b499",
         "titleBar.inactiveForeground": "#e7e7e799",
-        "tab.activeBorder": "#711231"
+        "tab.activeBorder": "#739fc3"
     },
-    "peacock.color": "#450b1e",
+    "peacock.color": "#4F87B4",
     "mochaExplorer.files": "src/test/**/*test.ts",
     "mochaExplorer.logpanel": true,
     "mochaExplorer.require": "ts-node/register",
