- improve Create File - add Remove File

--- a/package.json
+++ b/package.json
@@ -116,6 +116,14 @@
                 "command": "vscode-FileSystemToolbox.TransformPathToWin32",
                 "title": "FST: Transform path to Win32",
                 "enablement": "editorHasSelection"
+            },
+            {
+                "command": "vscode-FileSystemToolbox.NewFileRelativeToCurrentFile",
+                "title": "FST: New file relative to current file"
+            },
+            {
+                "command": "vscode-FileSystemToolbox.NewFileRelativeToWorkspaceRoot",
+                "title": "FST: New file relative to workspace root"
             }
         ],
         "menus": {
