--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,23 +10,23 @@
     "typescript.tsc.autoDetect": "off",
     "favorites.sortDirection": "ASC",
     "workbench.colorCustomizations": {
-        "activityBar.activeBackground": "#739fc3",
-        "activityBar.activeBorder": "#9c4374",
-        "activityBar.background": "#739fc3",
-        "activityBar.foreground": "#15202b",
-        "activityBar.inactiveForeground": "#15202b99",
-        "activityBarBadge.background": "#9c4374",
+        "activityBar.activeBackground": "#457ca4",
+        "activityBar.activeBorder": "#702f55",
+        "activityBar.background": "#457ca4",
+        "activityBar.foreground": "#e7e7e7",
+        "activityBar.inactiveForeground": "#e7e7e799",
+        "activityBarBadge.background": "#702f55",
         "activityBarBadge.foreground": "#e7e7e7",
-        "statusBar.background": "#4f87b4",
+        "statusBar.background": "#366180",
         "statusBar.foreground": "#e7e7e7",
-        "statusBarItem.hoverBackground": "#739fc3",
-        "titleBar.activeBackground": "#4f87b4",
+        "statusBarItem.hoverBackground": "#457ca4",
+        "titleBar.activeBackground": "#366180",
         "titleBar.activeForeground": "#e7e7e7",
-        "titleBar.inactiveBackground": "#4f87b499",
+        "titleBar.inactiveBackground": "#36618099",
         "titleBar.inactiveForeground": "#e7e7e799",
-        "tab.activeBorder": "#739fc3"
+        "tab.activeBorder": "#457ca4"
     },
-    "peacock.color": "#4F87B4",
+    "peacock.color": "#366180",
     "mochaExplorer.files": "src/test/**/*test.ts",
     "mochaExplorer.logpanel": true,
     "mochaExplorer.require": "ts-node/register",
