refactor and improve pathAutocompleter

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,14 +17,14 @@
         "activityBar.inactiveForeground": "#e7e7e799",
         "activityBarBadge.background": "#702f55",
         "activityBarBadge.foreground": "#e7e7e7",
-        "statusBar.background": "#366180",
-        "statusBar.foreground": "#e7e7e7",
-        "statusBarItem.hoverBackground": "#457ca4",
         "titleBar.activeBackground": "#366180",
         "titleBar.activeForeground": "#e7e7e7",
         "titleBar.inactiveBackground": "#36618099",
         "titleBar.inactiveForeground": "#e7e7e799",
-        "tab.activeBorder": "#457ca4"
+        "tab.activeBorder": "#457ca4",
+        "statusBar.background": "#366180",
+        "statusBar.foreground": "#e7e7e7",
+        "statusBarItem.hoverBackground": "#457ca4"
     },
     "peacock.color": "#366180",
     "mochaExplorer.files": "src/test/**/*test.ts",
