--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "contributes": {
         "commands": [
             {
-                "command": "vscode-FileSystemToolbox.CopyFilePath",
+                "command": "copyFilePath",
                 "title": "FST: Copy active file path",
                 "enablement": "editorIsOpen"
             },
@@ -129,7 +129,7 @@
         "menus": {
             "menuBar/edit/copy": [
                 {
-                    "command": "vscode-FileSystemToolbox.CopyFilePath",
+                    "command": "copyFilePath",
                     "group": "File System Toolbox"
                 },
                 {
@@ -191,7 +191,7 @@
             ],
             "editor/title/context": [
                 {
-                    "command": "vscode-FileSystemToolbox.CopyFilePath",
+                    "command": "copyFilePath",
                     "group": "File System Toolbox"
                 },
                 {
