- add PathCompleter settings - read and honor config settings and changes - code cleanup

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -30,5 +30,6 @@
     "mochaExplorer.files": "src/test/**/*test.ts",
     "mochaExplorer.logpanel": true,
     "mochaExplorer.require": "ts-node/register",
-    "mochaExplorer.esmLoader": false
+    "mochaExplorer.esmLoader": false,
+    "cSpell.words": ["Autocompleter", "USERPROFILE", "carlocardella", "filesystemtoolbox", "submenu", "submenus"]
 }
