update logo path in extension manifest

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "categories": [
         "Other"
     ],
-    "icon": "/Assets/tech-service.png",
+    "icon": "Assets/tech-service.png",
     "preview": true,
     "publisher": "carlocardella",
     "author": {
