--- a/package.json
+++ b/package.json
@@ -322,6 +322,11 @@
                         "description": "Trigger path autocompletion even if the path is outside quotes",
                         "type": "boolean",
                         "default": true
+                    },
+                    "fst.PathCompleterExpandHomeDirAlias": {
+                        "description": "Expand the home directory alias to the user home directory",
+                        "type": "boolean",
+                        "default": false
                     }
                 }
             }
