- add context menu command - update readme - update changelog

--- a/package.json
+++ b/package.json
@@ -171,6 +171,9 @@
                 {
                     "submenu": "fst.transform",
                     "group": "Transform"
+                },
+                {
+                    "command": "vscode-FileSystemToolbox.OpenFileUnderCursor"
                 }
             ],
             "fst.copy": [
